--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,85 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.keerthana.appportfolio.MainActivity"
-    android:background="#c6f2ed"
+    android:background="@color/mainbg"
     android:padding="15dp">
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/project1"
-        android:id="@+id/project1"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#010e1f"
-        android:textColor="#faf4f4"
+        android:id="@+id/btnproject1"
+        style = "@style/BtnMain"
         android:onClick="launch1" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/project2"
-        android:id="@+id/project2"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#010e1f"
-        android:textColor="#faf4f4"
+        android:id="@+id/btnproject2"
+        style="@style/BtnMain"
         android:onClick="launch2" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/project3"
-        android:id="@+id/project3"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#010e1f"
-        android:textColor="#faf4f4"
+        android:id="@+id/btnproject3"
+        style="@style/BtnMain"
         android:onClick="launch3" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/project4"
-        android:id="@+id/project4"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#010e1f"
-        android:textColor="#faf4f4"
+        android:id="@+id/btnproject4"
+        style="@style/BtnMain"
         android:onClick="launch4" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/project5"
-        android:id="@+id/project5"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#010e1f"
-        android:textColor="#faf4f4"
+        android:id="@+id/btnproject5"
+        style="@style/BtnMain"
         android:onClick="launch5" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/capstone"
-        android:id="@+id/capstone"
-        android:layout_gravity="center_horizontal"
-        android:padding="25dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:width="275dp"
-        android:background="#07288d"
-        android:textColor="#efd170"
+        android:id="@+id/btncapstone"
+        style="@style/BtnMain"
+        android:background="@color/capstonebg"
+        android:textColor="@color/capstonetxt"
         android:textStyle="bold"
         android:onClick="launchc" />
 </LinearLayout>
